--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                 <a class="title" href="#">Product 1</a>
                                 <p>long description here 1</p>
                                 <div class="price">
-                                    <span class="st">Our price:</span><strong>$550.00</strong>
+                                    <span class="st">Our price:</span><strong>Rp 550.000</strong>
                                 </div>
                                 <div class="actions">
                                     <a href="#">Details</a>
@@ -107,7 +107,7 @@
                                 <a class="title" href="#">Product 2</a>
                                 <p>long description here 2</p>
                                 <div class="price">
-                                    <span class="st">Our price:</span><strong>$250.00</strong>
+                                    <span class="st">Our price:</span><strong>Rp 250.000</strong>
                                 </div>
                                 <div class="actions">
                                     <a href="#">Details</a>
@@ -121,7 +121,7 @@
                                 <a class="title" href="#">Product 3</a>
                                 <p>long description here 3</p>
                                 <div class="price">
-                                    <span class="st">Our price:</span><strong>$350.00</strong>
+                                    <span class="st">Our price:</span><strong>Rp 350.000</strong>
                                 </div>
                                 <div class="actions">
                                     <a href="#">Details</a>
@@ -135,7 +135,7 @@
                                 <a class="title" href="#">Product 4</a>
                                 <p>long description here 1</p>
                                 <div class="price">
-                                    <span class="st">Our price:</span><strong>$550.00</strong>
+                                    <span class="st">Our price:</span><strong>Rp 550.000</strong>
                                 </div>
                                 <div class="actions">
                                     <a href="#">Details</a>
@@ -149,7 +149,7 @@
                                 <a class="title" href="#">Product 5</a>
                                 <p>long description here 2</p>
                                 <div class="price">
-                                    <span class="st">Our price:</span><strong>$250.00</strong>
+                                    <span class="st">Our price:</span><strong>Rp 250.000</strong>
                                 </div>
                                 <div class="actions">
                                     <a href="#">Details</a>
@@ -163,7 +163,7 @@
                                 <a class="title" href="#">Product 6</a>
                                 <p>long description here 3</p>
                                 <div class="price">
-                                    <span class="st">Our price:</span><strong>$350.00</strong>
+                                    <span class="st">Our price:</span><strong>Rp 350.000</strong>
                                 </div>
                                 <div class="actions">
                                     <a href="#">Details</a>
@@ -181,8 +181,8 @@
                             <div class="info">
                                 <a class="title" href="#">Product 7</a>
                                 <div class="price">
-                                    <span class="usual">$600.00 </span>&nbsp;
-                                    <span class="special">$500.00</span>
+                                    <span class="usual">Rp 600.000 </span>&nbsp;
+                                    <span class="special">Rp 500.000</span>
                                 </div>
                             </div>
                         </li>
@@ -191,8 +191,8 @@
                             <div class="info">
                                 <a class="title" href="#">Product 8</a>
                                 <div class="price">
-                                    <span class="usual">$500.00 </span>&nbsp;
-                                    <span class="special">$400.00</span>
+                                    <span class="usual">Rp 500.000 </span>&nbsp;
+                                    <span class="special">Rp 400.000</span>
                                 </div>
                             </div>
                         </li>
@@ -201,8 +201,8 @@
                             <div class="info">
                                 <a class="title" href="#">Product 9</a>
                                 <div class="price">
-                                    <span class="usual">$700.00 </span>&nbsp;
-                                    <span class="special">$600.25</span>
+                                    <span class="usual">Rp 700.000 </span>&nbsp;
+                                    <span class="special">Rp 600.25</span>
                                 </div>
                             </div>
                         </li>
@@ -211,8 +211,8 @@
                             <div class="info">
                                 <a class="title" href="#">Product 10</a>
                                 <div class="price">
-                                    <span class="usual">$805.00 </span>&nbsp;
-                                    <span class="special">$714.25</span>
+                                    <span class="usual">Rp 805.00 </span>&nbsp;
+                                    <span class="special">Rp 714.25</span>
                                 </div>
                             </div>
                         </li>
@@ -221,8 +221,8 @@
                             <div class="info">
                                 <a class="title" href="#">Product 11</a>
                                 <div class="price">
-                                    <span class="usual">$1205.00 </span>&nbsp;
-                                    <span class="special">$1000.25</span>
+                                    <span class="usual">Rp 1205.00 </span>&nbsp;
+                                    <span class="special">Rp 1000.25</span>
                                 </div>
                             </div>
                         </li>
@@ -231,8 +231,8 @@
                             <div class="info">
                                 <a class="title" href="#">Product 12</a>
                                 <div class="price">
-                                    <span class="usual">$200.00 </span>&nbsp;
-                                    <span class="special">$190.25</span>
+                                    <span class="usual">Rp 200.000 </span>&nbsp;
+                                    <span class="special">Rp 190.25</span>
                                 </div>
                             </div>
                         </li>
